--- a/src/components/Video/styles.module.scss
+++ b/src/components/Video/styles.module.scss
@@ -1,9 +1,8 @@
 .vidWrap {
   height: 100%;
   overflow: hidden;
-
   &.active {
-    border: 4px solid red;
+    border: 5px solid rgb(247, 223, 6);
   }
 }
 
