--- a/src/components/Gallery/styles.module.scss
+++ b/src/components/Gallery/styles.module.scss
@@ -1,6 +1,5 @@
-.outer {
+.inner {
   overflow: hidden;
-  border-radius: 8px;
 }
 .wrap {
   height: 100vh;
@@ -9,4 +8,14 @@
 }
 .slide {
   height: 100%;
+  position: relative;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 }
