--- a/src/components/Overlay/styles.module.scss
+++ b/src/components/Overlay/styles.module.scss
@@ -1,14 +1,15 @@
 .outer {
   width: 100%;
-  height: fit-content;
+  height: 100%;
   display: flex;
   position: relative;
+  align-items: flex-end;
   color: rgb(234, 234, 234);
   padding: 20px;
 }
 .textBox {
-  width: 75%;
-  height: 100%;
+  width: 85%;
+  height: fit-content;
   padding: 5px;
   background: rgba(75, 75, 75, 0.5);
 }
@@ -22,9 +23,10 @@
 }
 .sideBarBtn {
   border: none;
+  width: 32px;
   background: rgba(75, 75, 75, 0.5);
   border-radius: 8px;
-  padding: 10px 5px;
+  padding: 5px;
   color: inherit;
   display: flex;
   flex-direction: column;
