--- a/src/components/Gallery/styles.module.scss
+++ b/src/components/Gallery/styles.module.scss
@@ -18,4 +18,20 @@
   display: flex;
   align-items: flex-end;
   justify-content: center;
+
+  // vignette effect, transparent to black to make text legible
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 10%,
+    rgba(0, 0, 0, 0) 20%,
+    rgba(0, 0, 0, 0.05) 65%,
+    rgba(0, 0, 0, 0.1) 70%,
+    rgba(0, 0, 0, 0.2) 75%,
+    rgba(0, 0, 0, 0.3) 80%,
+    rgba(0, 0, 0, 0.45) 85%,
+    rgba(0, 0, 0, 0.65) 90%,
+    rgba(0, 0, 0, 0.75) 95%,
+    rgba(0, 0, 0, 0.85) 100%
+  );
 }
