--- a/src/components/Overlay/styles.module.scss
+++ b/src/components/Overlay/styles.module.scss
@@ -5,12 +5,13 @@
   position: relative;
   align-items: flex-end;
   color: rgb(234, 234, 234);
-  padding: 20px;
 }
 .textBox {
   width: 85%;
   height: fit-content;
   padding: 5px;
+  margin-left: 20px;
+  margin-bottom: 20px;
   text-align: start;
 }
 .sideBar {
@@ -33,4 +34,11 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
+.commentBox {
+  position: absolute;
+  background: rgba(42, 42, 42, 0.95);
+  width: 100%;
+  height: 50%;
+  border-radius: 20px 20px 0 0;
 }
