--- a/src/components/Gallery/styles.module.scss
+++ b/src/components/Gallery/styles.module.scss
@@ -1,13 +1,21 @@
+.outer {
+  display: flex;
+  align-items: flex-end;
+  height: 94vh;
+}
 .inner {
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  height: 90vh;
 }
 .wrap {
-  height: 100vh;
+  height: 90vh;
   width: 500px;
-  margin: 0 auto;
 }
+
 .slide {
-  height: 100%;
+  height: 94vh;
   position: relative;
 }
 .overlay {
