--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,12 @@
 .outer {
   margin: 0 auto;
-  width: 500px;
   text-align: center;
-  border-radius: 4px;
   background: black;
   color: white;
+  @media (min-width: 500px) {
+    width: 500px;
+    border-radius: 4px;
+  }
 }
 .main {
   height: 94vh;
