--- a/src/components/Overlay/styles.module.scss
+++ b/src/components/Overlay/styles.module.scss
@@ -7,12 +7,13 @@
   color: rgb(234, 234, 234);
 }
 .textBox {
-  width: 85%;
   height: fit-content;
   padding: 5px;
   margin-left: 20px;
   margin-bottom: 20px;
   text-align: start;
+  width: 80%;
+  font-size: 0.9rem;
 }
 .sideBar {
   position: absolute;
