--- a/src/components/Overlay/styles.module.scss
+++ b/src/components/Overlay/styles.module.scss
@@ -4,7 +4,28 @@
   display: flex;
   position: relative;
   align-items: flex-end;
-  color: rgb(234, 234, 234);
+  // vignette effect, transparent to black to make text legible
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.25) 0%,
+    rgba(0, 0, 0, 0.2) 1%,
+    rgba(0, 0, 0, 0.175) 2%,
+    rgba(0, 0, 0, 0.125) 3%,
+    rgba(0, 0, 0, 0.1) 4%,
+    rgba(0, 0, 0, 0.075) 6%,
+    rgba(0, 0, 0, 0.05) 8%,
+    rgba(0, 0, 0, 0) 10%,
+    rgba(0, 0, 0, 0.2) 65%,
+    rgba(0, 0, 0, 0.3) 75%,
+    rgba(0, 0, 0, 0.4) 80%,
+    rgba(0, 0, 0, 0.5) 85%,
+    rgba(0, 0, 0, 0.6) 90%,
+    rgba(0, 0, 0, 0.7) 93%,
+    rgba(0, 0, 0, 0.75) 95%,
+    rgba(0, 0, 0, 0.8) 97%,
+    rgba(0, 0, 0, 0.85) 100%
+  );
+  color: white;
 }
 .textBox {
   height: fit-content;
@@ -42,4 +63,16 @@
   width: 100%;
   height: 50%;
   border-radius: 20px 20px 0 0;
+}
+
+.backBtn {
+  border: none;
+  width: 32px;
+  padding: 0;
+  background: transparent;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  color: white;
+  cursor: pointer;
 }
