--- a/src/components/Gallery/styles.module.scss
+++ b/src/components/Gallery/styles.module.scss
@@ -1,16 +1,14 @@
 .outer {
-  display: flex;
-  align-items: flex-end;
-  height: 100%;
-  width: 500px;
-}
-.inner {
   overflow: hidden;
-  display: flex;
-  justify-content: center;
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 
-.slide {
+.inner {
+  width: 100%;
+  height: 100%;
+}
+.slideWrap {
+  width: 100%;
   height: 100%;
 }
