--- a/src/components/Grid/styles.module.scss
+++ b/src/components/Grid/styles.module.scss
@@ -1,11 +1,11 @@
 .outer {
   display: flex;
-  height: 94vh;
+  height: 100%;
   justify-content: center;
   align-items: flex-end;
 }
 .grid {
-  height: 90vh;
+  height: 100%;
   width: 100%;
   display: grid;
   list-style-type: none;
