--- a/src/components/Comments/styles.module.scss
+++ b/src/components/Comments/styles.module.scss
@@ -1,29 +1,62 @@
 .outer {
   // position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  align-items: flex-end;
 }
 .wrap {
   list-style: none;
-  padding: 25px 30px;
-}
-.closeBar {
-  height: 100%;
+  padding: 0;
   width: 100%;
-  border-bottom: 1px solid white;
+  height: 100%;
+  overflow-y: scroll;
+}
+.wrap::-webkit-scrollbar {
+  width: 5px;
+}
+
+.wrap::-webkit-scrollbar-thumb {
+  background: rgb(124, 123, 123);
+  border-radius: 10px;
 }
 .closeBtn {
-  display: block;
   border: none;
   background: inherit;
   color: white;
-  width: 100%;
   padding: 5px;
-  // padding: 5px;
   cursor: pointer;
-}
-.comment {
-  margin: 210px auto;
+  width: fit-content;
+  margin-bottom: 5px;
 }
 .closeIcon {
   width: 25px;
-  margin: 0 auto;
+}
+.comment {
+  margin: 15px auto;
+  font-size: 0.9rem;
+  display: flex;
+  gap: 15px;
+  align-items: center;
+}
+.commentImg {
+  width: 45px;
+  height: 45px;
+  overflow: hidden;
+  border-radius: 50%;
+  background: rgb(30, 30, 30);
+  & img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    object-position: center;
+  }
+}
+.commentText {
+  flex: 1;
+}
+
+.userName {
+  font-size: 0.9rem;
 }
