--- a/src/components/Comments/styles.module.scss
+++ b/src/components/Comments/styles.module.scss
@@ -3,32 +3,49 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding: 20px;
   align-items: flex-end;
+
+  padding: 20px;
 }
 .wrap {
   list-style: none;
-  padding: 0;
+  padding: 0px;
   width: 100%;
   height: 100%;
-}
-.simpleBar {
-  height: 100%;
-  width: 100%;
-  padding: 5px 20px 20px;
-}
-// fix double scrollbar on mobile
-.simpleBar::-webkit-scrollbar {
-  display: none;
+  overflow-y: scroll;
+  scrollbar-width: thin;
 }
 
+// fix double scrollbar on mobile
+.wrap::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+.wrap::-webkit-scrollbar:vertical {
+  width: 8px;
+}
+
+.wrap::-webkit-scrollbar:horizontal {
+  height: 8px;
+}
+
+.wrap::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background-color: rgb(90, 90, 90);
+}
+
+.wrap::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 8px;
+}
 .closeBtn {
   border: none;
   background: inherit;
-  color: white;
+  color: rgb(184, 179, 179);
   padding: 5px;
   cursor: pointer;
   width: fit-content;
+  margin-right: 0px;
 }
 .closeIcon {
   width: 25px;
