--- a/src/components/GridItem/styles.module.scss
+++ b/src/components/GridItem/styles.module.scss
@@ -1,10 +1,12 @@
 .imgWrap {
   width: 100%;
-  height: 100%;
+  padding-bottom: 133.33%;
   overflow: hidden;
   cursor: pointer;
+  position: relative;
 }
 .img {
+  position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
