--- a/src/components/Home/styles.module.scss
+++ b/src/components/Home/styles.module.scss
@@ -32,7 +32,9 @@
   align-items: center;
   @media (min-width: 600px) {
     flex-direction: row;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+    justify-content: space-between;
+    width: 100%;
   }
 }
 
@@ -75,12 +77,55 @@
   flex-direction: column;
   align-items: center;
 }
+.btnContainer {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  @media (min-width: 600px) {
+    flex-direction: row;
+  }
+}
+.smallBtnWrap {
+  display: flex;
+  height: 100%;
+  gap: 5px;
+
+  flex-grow: 1;
+}
+.btn {
+  cursor: pointer;
+  border-radius: 4px;
+  border: none;
+  height: 35px;
+}
 .btnFollow {
   width: 275px;
-  height: 35px;
-  cursor: pointer;
+  color: white;
+  background: rgb(112, 30, 30);
+  transition: all 0.2s ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:hover {
+    background: rgb(167, 44, 44);
+  }
+  &.active {
+    background: rgba(60, 60, 60, 0.75);
+  }
 }
-
+.btnIcon {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 30px;
+  & * {
+    color: rgb(73, 72, 72);
+    width: 20px;
+  }
+}
 .profileBio {
   margin-top: 10px;
 }
