--- a/src/components/Home/styles.module.scss
+++ b/src/components/Home/styles.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   overflow: hidden;
   margin: 0 auto;
+  position: relative;
   @media (min-width: 600px) {
     max-width: 500px;
   }
@@ -120,12 +121,21 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0;
   min-width: 30px;
   & * {
     color: rgb(73, 72, 72);
-    width: 20px;
+    max-width: 20px;
   }
 }
 .profileBio {
   margin-top: 10px;
+}
+
+.modal {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  z-index: 1;
 }
