--- a/src/components/Modal/styles.module.scss
+++ b/src/components/Modal/styles.module.scss
@@ -49,23 +49,20 @@
 .title {
   justify-content: center;
 }
-
-.btnIcon {
+.btnIcon,
+.btnText {
   width: 30px;
-  background-color: transparent;
-  border: none;
   padding: 2px;
+  background-color: transparent;
+}
+.btnIcon {
   color: rgb(91, 90, 90);
-  cursor: pointer;
 }
-.favorite {
+.btnText {
+  color: white;
+}
+.active {
   color: rgb(240, 173, 28);
-}
-.muted {
-  color: rgb(144, 74, 74);
-}
-.reported {
-  color: rgb(141, 36, 36);
 }
 .unfollowBtn {
   &:hover {
