--- a/src/components/Home/styles.module.scss
+++ b/src/components/Home/styles.module.scss
@@ -11,7 +11,6 @@
     max-width: 500px;
   }
 }
-
 .username {
   margin: 20px;
 }
@@ -26,73 +25,12 @@
   height: 0;
 }
 
-.profileTopWrap {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  @media (min-width: 600px) {
-    flex-direction: row;
-    margin-bottom: 15px;
-    justify-content: space-between;
-    width: 100%;
-  }
-}
-
-.profile {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  padding: 20px;
-  padding-top: 0;
-  @media (min-width: 600px) {
-    width: 85%;
-  }
-}
-
-.profileStats {
-  display: flex;
-  margin: 10px auto;
-  justify-content: space-evenly;
-  width: 275px;
-}
-
-.profilePic {
-  width: 75px;
-  height: 75px;
-  border: 1px solid rgba(255, 255, 255, 0.723);
-  border-radius: 50%;
-  overflow: hidden;
-  & img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-}
-
-.statsWrap {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.btnContainer {
-  display: flex;
+.modal {
+  position: absolute;
   width: 100%;
-  justify-content: space-between;
-  align-items: center;
-  gap: 10px;
-  @media (min-width: 600px) {
-    flex-direction: row;
-  }
-}
-.smallBtnWrap {
-  display: flex;
   height: 100%;
-  gap: 5px;
-  flex-grow: 1;
+  top: 0;
+  z-index: 1;
 }
 .btn {
   cursor: pointer;
@@ -110,41 +48,8 @@
   color: white;
 }
 
-.btnFollow {
-  width: 275px;
-  color: white;
-  background: rgb(112, 30, 30);
-  transition: all 0.2s ease-in-out;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  &:hover {
-    background: rgb(167, 44, 44);
-  }
-  &.active {
-    background: rgba(60, 60, 60, 0.75);
-  }
-}
-.btnIcon {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.icon {
-  color: rgb(73, 72, 72);
-  width: 22px;
-}
-.profileBio {
-  margin-top: 10px;
-}
-.btnAlert {
-  color: rgba(167, 44, 44, 0.75);
-}
-.modal {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  z-index: 1;
+.gridCover {
+  opacity: 0.4;
+  filter: blur(5px);
+  pointer-events: none;
 }
