--- a/src/components/Home/styles.module.scss
+++ b/src/components/Home/styles.module.scss
@@ -1,30 +1,33 @@
 .outer {
   display: flex;
-  height: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
   margin: 0 auto;
   position: relative;
   @media (min-width: 600px) {
     max-width: 500px;
   }
 }
-.username {
+.header {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: sticky;
   margin: 20px;
 }
-.inner {
-  width: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
+.backBtn {
+  width: 32px;
+  padding: 0;
+  background: transparent;
+  color: white;
+  position: absolute;
+  left: 0;
 }
-.inner::-webkit-scrollbar {
-  /* WebKit */
-  width: 0;
-  height: 0;
+.username {
+  font-size: 1.4rem;
 }
-
 .modal {
   position: absolute;
   width: 100%;
@@ -37,19 +40,4 @@
   border-radius: 4px;
   border: none;
   height: 35px;
-}
-.backBtn {
-  width: 32px;
-  padding: 0;
-  background: transparent;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  color: white;
-}
-
-.gridCover {
-  opacity: 0.4;
-  filter: blur(5px);
-  pointer-events: none;
 }
