--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,5 +2,19 @@
   margin: 0 auto;
   background: black;
   color: white;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.galleryWrap {
+  position: absolute;
+  top: 0;
+  width: 100%;
   height: 100%;
+  transform: translateX(100%);
+  transition: all 0.3s ease-in-out;
+  &.active {
+    transform: translateX(0%);
+  }
 }
