--- a/src/components/Home/styles.module.scss
+++ b/src/components/Home/styles.module.scss
@@ -1,21 +1,22 @@
 .outer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   margin: 0 auto;
   position: relative;
+  height: 100%;
+  // overflow: scroll;
+  // overflow: hidden;
   @media (min-width: 600px) {
     max-width: 500px;
   }
 }
 .header {
   width: 100%;
+  height: 10%;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: sticky;
-  margin: 20px;
+  // TODO: make header sticky to top of screen
+  // position: sticky;
+  padding: 20px;
 }
 .backBtn {
   width: 32px;
@@ -40,4 +41,19 @@
   border-radius: 4px;
   border: none;
   height: 35px;
+}
+
+.inner {
+  overflow-x: hidden;
+  overflow-y: scroll;
+  height: 90%;
+  &.activeGallery {
+    overflow: hidden;
+  }
+}
+
+.inner::-webkit-scrollbar {
+  /* WebKit */
+  width: 0;
+  height: 0;
 }
