--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -2,7 +2,7 @@
   margin: 0 auto;
   background: black;
   color: white;
-  height: 100vh;
+  height: 100%;
   position: relative;
   overflow: hidden;
 }
