--- a/src/components/Slide/styles.module.scss
+++ b/src/components/Slide/styles.module.scss
@@ -1,4 +1,4 @@
-.vidWrap {
+.slideWrap {
   height: 100%;
   width: 100%;
   overflow: hidden;
@@ -11,10 +11,17 @@
   object-fit: cover;
   pointer-events: none;
 }
+.vidWrap {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
 .overlay {
   position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: 1; // keep overlay on top
+  z-index: 3; // keep overlay on top
 }
