--- a/src/components/Grid/styles.module.scss
+++ b/src/components/Grid/styles.module.scss
@@ -4,19 +4,13 @@
   justify-content: center;
   align-items: flex-end;
   margin: 0 auto;
-  @media (min-width: 600px) {
-    max-width: 500px;
-  }
 }
 .grid {
   height: 100%;
   width: 100%;
   display: grid;
   list-style-type: none;
-  grid-template-columns: repeat(3, calc(100vw / 3));
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 3px;
   padding: 0;
-  @media (min-width: 600px) {
-    grid-template-columns: repeat(3, calc(494px / 3));
-  }
 }
